fix: remove the extreme left and right spacing to make my design equal and proportional to the given template

--- a/styles/style.css
+++ b/styles/style.css
@@ -43,7 +43,6 @@ header {
   left: 0;
   width: 100%;
   height: 100%;
-  padding-top: 5%;
 }
 
 .toggle-nav ul {
@@ -52,12 +51,13 @@ header {
   justify-content: space-between;
   align-items: flex-start;
   height: 25%;
-  padding-top: 10%;
   width: 25%;
   margin-top: 20%;
   margin-left: 10%;
   list-style-type: none;
   color: #fff;
+  font-family: Inter, sans-serif;
+  font-weight: bold;
 }
 
 .toggle-nav ul li {
@@ -68,9 +68,10 @@ header {
 
 #toggle-close {
   float: right;
-  padding-top: 3%;
+  padding-top: 8%;
   margin-right: 17%;
   color: #fff;
+  border: 2px solid #3C3A39;;
 }
 
 /* ================== Styleling the flex elements ============================== */
